// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer Footer.Copyright matches snapshot: Footer.Copyright 1`] = `
<div>
  <p
    class="nhsuk-body-s"
  >
    © NHS England
  </p>
</div>
`;

exports[`Footer Footer.List matches snapshot: Footer.List 1`] = `
<div>
  <ul
    class="nhsuk-footer__list"
  />
</div>
`;

exports[`Footer Footer.ListItem matches snapshot: Footer.ListItem 1`] = `
<div>
  <li
    class="nhsuk-footer__list-item"
  >
    <a
      class="nhsuk-footer__list-item-link"
    />
  </li>
</div>
`;

exports[`Footer Footer.Meta matches snapshot: Footer.Meta 1`] = `
<div>
  <div
    class="nhsuk-footer__meta"
  >
    <h2
      class="nhsuk-u-visually-hidden"
    >
      Support links
    </h2>
    <ul
      class="nhsuk-footer__list"
    />
    <p
      class="nhsuk-body-s"
    >
      © NHS England
    </p>
  </div>
</div>
`;

exports[`Footer matches snapshot: Footer 1`] = `
<div>
  <footer
    class="nhsuk-footer"
    role="contentinfo"
  >
    <div
      class="nhsuk-width-container"
    />
  </footer>
</div>
`;
